<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/record_window_layout"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:gravity="center_vertical"
    android:background="@drawable/shap_oval_gray">
    <LinearLayout
        android:id="@+id/recording_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/screen_tool"
            android:textSize="12sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/opera_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">
        <TextView
            android:id="@+id/back"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="12sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/privacy"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/privacy_on"
            android:textSize="12sp"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/camera"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/camera_on"
            android:textSize="12sp"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/mix"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/mix_on"
            android:textSize="12sp"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/mic"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/mic_off"
            android:textSize="12sp"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/black"/>
        <ImageView
            android:id="@+id/go"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@mipmap/go"
            android:layout_marginRight="5dp"/>
    </LinearLayout>
</RelativeLayout>