<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_margin="10dp"
        android:id="@+id/top_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/exit"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@mipmap/back"
            android:scaleType="center"/>

        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true">
            <TextView
                android:visibility="gone"
                android:id="@+id/answer_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_oval"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/answer"/>
            <ImageView
                android:id="@+id/beauty_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/beauty_selector"
                android:layout_marginRight="20dp"
                android:clickable="true"/>
            <ImageView
                android:id="@+id/music"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/music"
                android:layout_marginRight="20dp"
                android:clickable="true"/>

            <ImageView
                android:id="@+id/flash"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/flash_selector"
                android:layout_marginRight="20dp"
                android:clickable="true"/>

            <ImageView
                android:id="@+id/camera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/camera_id"
                android:clickable="true"/>
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:id="@+id/push_url_layout"
        android:layout_below="@+id/top_bar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/push_url"/>
        <TextView
            android:id="@+id/push_url"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/push_url_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/ispushing"/>
        <TextView
            android:id="@+id/isPushing"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        android:background="@drawable/shap_gradient"
        android:orientation="horizontal">
        <Button
            android:id="@+id/preview_button"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:background="@null"
            android:ellipsize="end"
            android:textColor="@color/text_white"
            android:text="@string/stop_preview_button"/>
        <Button
            android:id="@+id/push_button"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:ellipsize="end"
            android:background="@null"
            android:textColor="@color/text_white"
            android:text="@string/start_button"/>
        <Button
            android:id="@+id/opera_button"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:ellipsize="end"
            android:background="@null"
            android:textColor="@color/text_white"
            android:text="@string/pause_button"/>
        <Button
            android:id="@+id/restart_button"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:ellipsize="end"
            android:background="@null"
            android:textColor="@color/text_white"
            android:text="@string/repush_button"/>
        <Button
            android:id="@+id/more"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:ellipsize="end"
            android:background="@null"
            android:textColor="@color/text_white"
            android:text="@string/more_setting_button"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/slide_left_view_log"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/slide_right_view_log_char"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>