<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_bg_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/target_bitrate"
                android:textColor="@color/text_white"
                android:textSize="@dimen/font_size_28px" />

            <EditText
                android:id="@+id/target_rate_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edit_round_bkg"
                android:paddingLeft="10dp"
                android:inputType="number"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/font_size_28px" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_white"
                android:layout_marginLeft="10dp"
                android:text="KB"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/min_bitrate"
                android:textColor="@color/text_white"
                android:textSize="@dimen/font_size_28px" />

            <EditText
                android:id="@+id/min_rate_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edit_round_bkg"
                android:paddingLeft="10dp"
                android:inputType="number"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/font_size_28px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_white"
                android:layout_marginLeft="10dp"
                android:text="KB"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/share"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_white"
            android:text="@string/share_button"/>

        <Button
            android:id="@+id/dynamic_add"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_white"
            android:text="@string/dy_add_button"/>

        <Button
            android:id="@+id/dynamic_remove"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_white"
            android:text="@string/dy_remove_button"/>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/auto_focus"
                android:textColor="@color/text_white"
                android:textSize="@dimen/font_size_28px" />

            <Switch
                android:id="@+id/autofocus_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textOff=""
                android:textOn=""
                android:thumb="@drawable/thumb"
                android:track="@drawable/track" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/setting_pre_mirror"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_28px" />

            <Switch
                android:id="@+id/preview_mirror_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff=""
                android:textOn=""
                android:thumb="@drawable/thumb"
                android:track="@drawable/track"
                android:checked="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/setting_push_mirror"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_28px" />

            <Switch
                android:id="@+id/push_mirror_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff=""
                android:textOn=""
                android:thumb="@drawable/thumb"
                android:track="@drawable/track"
                android:checked="false"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:textSize="@dimen/font_size_28px"
            android:textColor="@android:color/white"
            android:text="@string/landscape_model" />
        <RadioGroup
            android:id="@+id/setting_display_mode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/full"
                android:background="@drawable/left_shape_selector"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/text_white"
                android:textSize="@dimen/font_size_28px"
                android:button="@null"
                android:text="@string/display_mode_full" />

            <RadioButton
                android:id="@+id/fit"
                android:background="@drawable/middle_shape_selector"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/text_white"
                android:button="@null"
                android:checked="true"
                android:textSize="@dimen/font_size_28px"
                android:text="@string/display_mode_fit" />

            <RadioButton
                android:id="@+id/cut"
                android:background="@drawable/right_shape_selector"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:button="@null"
                android:textColor="@color/text_white"
                android:textSize="@dimen/font_size_28px"
                android:text="@string/display_mode_cut" />

        </RadioGroup>
    </LinearLayout>

</LinearLayout>